# legal-aid-navigator

./: .gitignore  Backend_README.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEPLOY_RENDER_ONLY.md  EXECUTIVE_SUMMARY.md  MVP_DOCUMENTATION_INDEX.md  MVP_IMPLEMENTATION_CHECKLIST.md  MVP_QUICK_REFERENCE.md  MVP_STRATEGY.md  PITCH_DECK_OUTLINE.md  PRESENTATION_QA_PREP.md  QUICK_DEPLOY.md  README.md  SUMMARY_OF_DELIVERABLES.md  legal_aid_navigator.ipynb  pyproject.toml  test_pdf_processing.py  test_rag.html  usecase_data_kg.json  vercel.json
backend/: app.py
data/golden_set/: ground_truth_answers.csv  questions.csv
data/raw/: austin_tenant_rights.json  california_civil_code.json  fair_housing_act.json  san_francisco_rent_control.json
evaluation_results/: 1_Naive_detailed_results.csv  2_BM25_detailed_results.csv  3_MultiQuery_detailed_results.csv  4_ParentDoc_detailed_results.csv  5_Compression_detailed_results.csv  6_Ensemble_detailed_results.csv  7_Semantic_detailed_results.csv  agent_performance_metrics.csv  agent_ragas_scores.csv  baseline_results.csv  enhanced_agent_evaluation.csv  evaluation_summary.txt  ragas_scores_by_strategy.csv  reranked_metrics.csv  reranked_results.csv  retrieval_strategies_comparison.csv
frontend/: Frontend_README.md  config.js  index.html
src/: chunking_strategy.py  data_ingestion.py  dynamic_rag.py
